--- a/app/src/main/res/layout/link_bank_account_layout.xml
+++ b/app/src/main/res/layout/link_bank_account_layout.xml
@@ -93,7 +93,7 @@
             android:layout_marginHorizontal="@dimen/dimen_24dp"
             android:layout_marginTop="@dimen/dimen_24dp"
             android:layout_marginBottom="@dimen/dimen_24dp"
-            android:onClick="@{() -> linkBankAccountInfo.linkBankAccountAction.invoke()}"
+            android:onClick="@{() -> linkBankAccountInfo.onLinkBankAccountAction()}"
             android:text="@string/link_your_bank_account"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="parent"
