--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -25,9 +25,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="@dimen/dimen_8dp"
-            android:layout_marginTop="@dimen/dimen_16dp"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            android:minHeight="0dp"
             android:onClick="@{() -> viewModel.onBackPressed()}"
+            android:padding="@dimen/dimen_16dp"
             app:icon="@drawable/ic_arrow_back"
             app:iconTint="@null"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,15 +42,13 @@
             visibility="@{viewModel.titleLogoId != null}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_24dp"
+            android:layout_marginTop="@dimen/dimen_12dp"
             android:layout_marginBottom="@dimen/dimen_16dp"
             android:contentDescription="@null"
             app:drawableRes="@{viewModel.titleLogoId}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
             tools:src="@drawable/ic_logo_toolbar" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -70,7 +72,6 @@
             app:layout_constraintEnd_toEndOf="@id/gl_title_end"
             app:layout_constraintStart_toStartOf="@id/gl_title_start"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
             app:textRes="@{viewModel.titleId}" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -85,7 +86,7 @@
             layout="@layout/three_steps_counter_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_40dp"
+            android:layout_marginTop="@dimen/dimen_28dp"
             android:layout_marginEnd="@dimen/dimen_16dp"
             app:currentStep="@{viewModel.currentStep}"
             app:isVisible="@{viewModel.stepCounterVisible}"
