--- a/app/src/main/res/navigation/more_graph.xml
+++ b/app/src/main/res/navigation/more_graph.xml
@@ -9,10 +9,13 @@
         android:id="@+id/moreFragment"
         android:name="com.wolfpackdigital.cashli.presentation.more.MoreFragment"
         android:label="MoreFragment"
-        tools:layout="@layout/fr_more" >
+        tools:layout="@layout/fr_more">
         <action
             android:id="@+id/action_moreFragment_to_helpFragment"
             app:destination="@id/helpFragment" />
+        <action
+            android:id="@+id/action_moreFragment_to_changePasswordFragment"
+            app:destination="@id/changePasswordFragment" />
     </fragment>
 
     <fragment
@@ -20,4 +23,10 @@
         android:name="com.wolfpackdigital.cashli.presentation.help.HelpFragment"
         android:label="HelpFragment"
         tools:layout="@layout/fr_help" />
+
+    <fragment
+        android:id="@+id/changePasswordFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.changePassword.ChangePasswordFragment"
+        android:label="ChangePasswordFragment"
+        tools:layout="@layout/fr_change_password" />
 </navigation>
