fix: avoid overlapping button

--- a/app/src/main/res/layout/fr_change_password.xml
+++ b/app/src/main/res/layout/fr_change_password.xml
@@ -110,7 +110,9 @@
                 android:text="@string/continue_name"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/et_confirm_new_password"
+                app:layout_constraintVertical_bias="1" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
