chore: address PR comments

--- a/app/src/main/res/layout/fr_change_password.xml
+++ b/app/src/main/res/layout/fr_change_password.xml
@@ -52,7 +52,7 @@
                 app:cliDrawableEnd="@{viewModel.currentPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
                 app:cliDrawableEndClick="@{viewModel::toggleCurrentPasswordVisible}"
                 app:cliError="@{viewModel.currentPasswordError}"
-                app:cliHint="@{@string/password_hint}"
+                app:cliHint="@{@string/et_hint}"
                 app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
                 app:cliInputType="@{viewModel.currentPasswordVisible ? InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_VISIBLE_PASSWORD : InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                 app:cliLabel="@{@string/change_password_current_password}"
@@ -69,7 +69,7 @@
                 app:cliDrawableEnd="@{viewModel.newPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
                 app:cliDrawableEndClick="@{viewModel::toggleNewPasswordVisible}"
                 app:cliError="@{viewModel.newPasswordError}"
-                app:cliHint="@{@string/password_hint}"
+                app:cliHint="@{@string/et_hint}"
                 app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
                 app:cliInputType="@{viewModel.newPasswordVisible ? InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_VISIBLE_PASSWORD : InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                 app:cliLabel="@{@string/change_password_new_password}"
@@ -86,7 +86,7 @@
                 app:cliDrawableEnd="@{viewModel.confirmNewPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
                 app:cliDrawableEndClick="@{viewModel::toggleConfirmNewPassword}"
                 app:cliError="@{viewModel.confirmNewPasswordError}"
-                app:cliHint="@{@string/password_hint}"
+                app:cliHint="@{@string/et_hint}"
                 app:cliImeOptions="@{EditorInfo.IME_ACTION_DONE}"
                 app:cliInputType="@{viewModel.confirmNewPasswordVisible ? InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_VISIBLE_PASSWORD : InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                 app:cliLabel="@{@string/change_password_confirm_new_password}"
