--- a/app/src/main/res/layout/fr_change_password.xml
+++ b/app/src/main/res/layout/fr_change_password.xml
@@ -32,7 +32,7 @@
                 app:viewModel="@{viewModel.toolbar}" />
 
             <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/tv_screen_title"
                 style="@style/TextView.H5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
                 app:cliText="@={viewModel.currentPassword}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_title" />
+                app:layout_constraintTop_toBottomOf="@id/tv_screen_title" />
 
             <com.wolfpackdigital.cashli.shared.utils.views.BaseEditText
                 android:id="@+id/et_new_password"
