--- a/app/src/main/res/layout/edit_profile_change_layout.xml
+++ b/app/src/main/res/layout/edit_profile_change_layout.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <import type="kotlin.jvm.functions.Function0" />
+
+        <import type="kotlin.Unit" />
+
         <variable
             name="icon"
             type="android.graphics.drawable.Drawable" />
@@ -25,11 +29,16 @@
             name="isLabelVisible"
             type="Boolean" />
 
+        <variable
+            name="onClick"
+            type="Function0&lt;Unit>" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> onClick.invoke()}">
 
         <ImageView
             android:id="@+id/iv_icon"
