--- a/app/src/main/res/navigation/more_graph.xml
+++ b/app/src/main/res/navigation/more_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/moreFragment"
         android:name="com.wolfpackdigital.cashli.presentation.more.MoreFragment"
         android:label="MoreFragment"
-        tools:layout="@layout/fr_more" >
+        tools:layout="@layout/fr_more">
         <action
             android:id="@+id/action_moreFragment_to_editProfileFragment"
             app:destination="@id/editProfileFragment" />
@@ -18,5 +18,18 @@
         android:id="@+id/editProfileFragment"
         android:name="com.wolfpackdigital.cashli.presentation.more.editProfile.EditProfileFragment"
         android:label="EditProfileFragment"
-        tools:layout="@layout/fr_edit_profile"/>
+        tools:layout="@layout/fr_edit_profile">
+        <action
+            android:id="@+id/action_editProfileFragment_to_changePhoneOrEmailFragment"
+            app:destination="@id/changePhoneOrEmailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/changePhoneOrEmailFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.more.editProfile.changePhoneOrEmail.ChangePhoneOrEmailFragment"
+        android:label="ChangePhoneOrEmailFragment"
+        tools:layout="@layout/fr_change_phone_email">
+        <argument
+            android:name="changePhoneOrEmail"
+            app:argType="com.wolfpackdigital.cashli.domain.entities.enums.EditPhoneOrEmail" />
+    </fragment>
 </navigation>
