--- a/app/src/main/res/layout/fr_change_phone_email.xml
+++ b/app/src/main/res/layout/fr_change_phone_email.xml
@@ -51,18 +51,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:viewModel="@{viewModel.toolbar}" />
 
-        <ImageView
+        <com.wolfpackdigital.cashli.shared.utils.views.ArcBackgroundView
             android:id="@+id/white_arch_background"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/dimen_56dp"
-            android:contentDescription="@null"
-            android:src="@drawable/ic_arch_white"
-            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tv_title_phone"
             style="@style/TextView.Bold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -95,7 +93,7 @@
             app:layout_constraintBottom_toTopOf="@id/btn_save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_phone"
             app:layout_constraintVertical_bias="0.0"
             app:onCliImeDoneAction="@{viewModel::closeKeyboardAndClearFocus}" />
 
