--- a/app/src/main/res/navigation/more_graph.xml
+++ b/app/src/main/res/navigation/more_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_moreFragment_to_changePasswordFragment"
             app:destination="@id/changePasswordFragment" />
+        <action
+            android:id="@+id/action_moreFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
     </fragment>
 
     <fragment
@@ -29,4 +32,9 @@
         android:name="com.wolfpackdigital.cashli.presentation.changePassword.ChangePasswordFragment"
         android:label="ChangePasswordFragment"
         tools:layout="@layout/fr_change_password" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.more.settings.SettingsFragment"
+        android:label="SettingsFragment"
+        tools:layout="@layout/fr_settings" />
 </navigation>
